--- a/src/FantasyEsportsBattle.Host/Areas/Identity/Pages/Tournaments/Index.cshtml
+++ b/src/FantasyEsportsBattle.Host/Areas/Identity/Pages/Tournaments/Index.cshtml
@@ -7,30 +7,41 @@
 <h4>@ViewData["Title"]</h4>
 <div class="row">
     <td><button class="btn btn-sm btn-dark details" data-id="tournament" data-toggle="modal" data-target="#tournament-modal">Create Tournament</button></td>
-    <div class="modal fade" tabindex="-1" role="dialog" id="tournament-modal">
-        <div class="modal-dialog">
-            <div class="modal-content">
-                <div class="modal-header">
-                    <h5 class="modal-title">Create Tournament</h5>
-                    <button type="button" class="close" data-dismiss="modal" aria-label-label="Close">
-                        <span aria-hidden="true">&times;</span>
-                    </button>
-                </div>
-                <div class="modal-body">
-                    <div>
-                        <h3>Choose between Competitions:</h3>
-                        @foreach (var competition in @Model.Competitions)
-                        {
-                            <h5>
-                                @competition
-                            <input type="checkbox">
-                        </h5>
-                    }
+
+    @using (Html.BeginForm("CreateTournament", "Index", FormMethod.Post))
+    {
+        <div class="modal fade" tabindex="-1" role="dialog" id="tournament-modal">
+            <div class="modal-dialog">
+                <div class="modal-content">
+                    <div class="modal-header">
+                        <h5 class="modal-title">Create Tournament</h5>
+                        <button type="button" class="close" data-dismiss="modal" aria-label-label="Close">
+                            <span aria-hidden="true">&times;</span>
+                        </button>
+                    </div>
+                    <div class="modal-body">
+                        <div>
+                            <input name="TournamentName" value="Tournament Name" type="text"/>
+                            <h3>Choose between Competitions:</h3>
+                            @foreach (var competition in @Model.Competitions)
+                            {
+                                <h5>
+                                    @competition
+                                    <input name="CheckedCompetitions" value="@competition" type="checkbox">
+                                </h5>
+                            }
+                        </div>
+                    </div>
+                    <div class="modal-footer">
+                        <td>
+                            <input type="submit" value="Create" asp-page-handler="CreateTournament" class="btn btn-primary"/>
+                        </td>
                     </div>
                 </div>
             </div>
         </div>
-    </div>
+    }
+
 </div>
 <h1>All Tournaments</h1>
 
