--- a/src/FantasyEsportsBattle.Web/Areas/Identity/Pages/Tournaments/SpecificTournament.razor
+++ b/src/FantasyEsportsBattle.Web/Areas/Identity/Pages/Tournaments/SpecificTournament.razor
@@ -17,7 +17,7 @@
         font-family: serif
     }
     .inTournament {
-        color: yellow !important;
+        color: darkgreen !important;
         font-family: serif
     }
     .invited {
@@ -42,11 +42,20 @@
     <Authorized>
         @if (ShouldLoad)
         {
-            <div class="mat-elevation-z4" style="padding: 10px;">
-                <MatButton OnClick="@(() => navMenu.ToggleAllSubMenus(true))">Expand All</MatButton>
-                <MatButton OnClick="@(() => navMenu.ToggleAllSubMenus(false))">Collapse All</MatButton>
-                <MatButton Icon="@MatIconNames.Favorite" Outlined="true" Class="invite-user" OnClick="@(() => OpenForm())">Invite User</MatButton>
-            </div>
+        <div class="mat-elevation-z4" style="padding: 10px;">
+            <MatButton OnClick="@(() => navMenu.ToggleAllSubMenus(true))">Expand All</MatButton>
+            <MatButton OnClick="@(() => navMenu.ToggleAllSubMenus(false))">Collapse All</MatButton>
+            @if (IsFormDisabled)
+            {
+                <MatTooltip Context="TooltipContext" Tooltip="@String.Format("Only {0} can invite players to this Tournament if Status is not started and there are empty slots",Tournament.TournamentHost.UserName)" Position="@MatTooltipPosition.Bottom">
+                    <MatButton RefBack="TooltipContext" Icon="@MatIconNames.Lock" Outlined="false" Class="invite-user">Invite User</MatButton>
+                </MatTooltip>
+            }
+            @if (!IsFormDisabled)
+            {
+                    <MatButton Icon="@MatIconNames.Favorite" Outlined="true" Class="invite-user" OnClick="@(() => OpenForm())">Invite User</MatButton>
+            }
+        </div>
             <h1 style="margin-top: 3%; margin-bottom: 2%;" class="tournamentName">@Tournament.Name</h1>
 
             <MatNavMenu @ref="navMenu">
@@ -68,9 +77,12 @@
                         }
 
                         <h2 class="playerList"></h2>
-                        @foreach (var user in Tournament.TournamentInvitations)
+                        @if (Tournament.TournamentInvitations != null)
                         {
-                            <MatNavItem Class="playerList" AllowSelection="false"><h4 class="text">@user.InvitedUser.UserName    </h4><h4 class="invited">  (PENDING INVITE)</h4></MatNavItem>
+                            @foreach (var user in Tournament.TournamentInvitations)
+                            {
+                                <MatNavItem Class="playerList" AllowSelection="false"><h4 class="text">@user.InvitedUser.UserName    </h4><h4 class="invited">  (PENDING INVITE)</h4></MatNavItem>
+                            }
                         }
                     </MatNavSubMenuList>
 
@@ -125,10 +137,16 @@
     public bool IsInviteFormOpen { get; set; }
     public bool IsPlayerInviteFailed { get; set; }
     public bool IsPlayerInvited { get; set; }
-    public bool IsFormDisabled { get; set; }
+    public bool IsFormDisabled { get
+        {
+            return Tournament.ApplicationUserTournaments.Count >= Tournament.MaxParticipants ||
+                Tournament.TournamentHost != User;
+        }
+    }
     public bool IsPlayerAlreadyInvited { get; set; }
     public bool IsPlayerAlreadyInTournament { get; set; }
     public string InvitedUser { get; set; }
+    public ApplicationUser User { get; set; }
     public string PlayersInTournamentTitle
     {
         get
@@ -142,6 +160,8 @@
     protected override async Task OnInitializedAsync()
     {
         var userId = AuthProvider.GetAuthenticationStateAsync().Result.User.Claims?.FirstOrDefault()?.Value;
+
+        User = dbContext.Users.FirstOrDefault(u => u.Id == userId);
 
         var parsedTournamentId = int.Parse(TournamentId);
 
@@ -165,6 +185,10 @@
         var user = dbContext.Users.FirstOrDefault(u => u.Id == userId);
         var invitedUser = dbContext.Users.ToList().FirstOrDefault(u => u.UserName.ToLowerInvariant() == InvitedUser.ToLowerInvariant());
 
+        if (Tournament.TournamentInvitations == null)
+        {
+            Tournament.TournamentInvitations = new List<TournamentInvitation>();
+        }
         if (invitedUser == null)
         {
             IsPlayerInviteFailed = true;
