--- a/src/FantasyEsportsBattle.Web/Areas/Identity/Pages/Tournaments/TournamentCreationModal.razor
+++ b/src/FantasyEsportsBattle.Web/Areas/Identity/Pages/Tournaments/TournamentCreationModal.razor
@@ -1,7 +1,9 @@
 ﻿@using FantasyEsportsBattle.Web.Data
+@using FantasyEsportsBattle.Web.Enumerations;
+@using FantasyEsportsBattle.Web.Data.Models;
 @inject ApplicationDbContext dbContext
 @inject IJSRuntime JS;
-@inject TournamentCreation TourCreation
+@inject TournamentService TourneyService
 @inject AuthenticationStateProvider AuthProvider
 
 <MatButton OnClick="@OpenForm" Class="create-tournament" Raised="true">Create New Tournament</MatButton>
@@ -10,8 +12,22 @@
     <MatDialogTitle>Create Tournament </MatDialogTitle>
     <MatDialogContent>
         <MatTextField Label="Tournament Name" @bind-Value="@TournamentName"></MatTextField>
+        <MatSelect @bind-Value="@TournamentTypeVal" TValue="string" Label="Tournament Type">
+            @foreach (var tourneyType in Enum.GetValues(typeof(TournamentType)).Cast<TournamentType>())
+            {
+                if (tourneyType != TournamentType.Official || User.AccountType == AccountType.Admin)
+                {
+                    <MatOptionString Value="@tourneyType.ToString()">@tourneyType</MatOptionString>
+                }
+            }
+        </MatSelect>
+        <MatSelect @bind-Value="@AlgorithmTypeVal" TValue="string" Label="Algorithm Type">
+            @foreach (var algorithmType in Enum.GetValues(typeof(TournamentAlgorithm)).Cast<TournamentAlgorithm>())
+            {
+                    <MatOptionString Value="@algorithmType.ToString()">@algorithmType</MatOptionString>
+            }
+        </MatSelect>
         <h3>Tournament Size: </h3>
-
         <MatSlider TValue="decimal" ValueMin="@ValueMin" ValueMax="@ValueMax" @bind-Value="@Value" EnableStep="true" Markers="true" Step="1" Pin="true" Discrete="true"></MatSlider>
         <h4>@Value</h4>
 
@@ -51,6 +67,8 @@
 
 @code{
     public string TournamentName { get; set; }
+    public string TournamentTypeVal { get; set; }
+    public string AlgorithmTypeVal { get; set; }
     private Dictionary<string, byte[]> Competitions { get; set; }
     public List<string> CheckedCompetitions { get; set; }
     public bool IsFormOpen { get; set; }
@@ -60,15 +78,18 @@
         {
             return CheckedCompetitions == null ||
                    !CheckedCompetitions.Any() ||
-                   string.IsNullOrEmpty(TournamentName);
+                   string.IsNullOrEmpty(TournamentName) ||
+                   string.IsNullOrEmpty(TournamentTypeVal) ||
+                   string.IsNullOrEmpty(AlgorithmTypeVal);
         }
     }
     public bool IsTournamentCreated { get; set; }
     public bool IsTournamentCreatedFailed { get; set; }
     public decimal ValueMin { get; set; } = 2;
     public decimal ValueMax { get; set; } = 8;
+    public ApplicationUser User { get; set; }
 
-    [Parameter] public EventCallback OnTournamentCreated { get; set; }
+    [Parameter] public EventCallback OnStateChanged { get; set; }
 
     public void OnValueChanged2(int val)
     {
@@ -88,6 +109,8 @@
 
     protected override async Task OnInitializedAsync()
     {
+        var user = await AuthProvider.GetAuthenticationStateAsync();
+        User = dbContext.Users.FirstOrDefault(u => u.Id == user.User.Claims.FirstOrDefault().Value);
         InitializeCompetitions();
     }
 
@@ -106,13 +129,13 @@
     public async Task CreateTournament()
     {
         var user = await AuthProvider.GetAuthenticationStateAsync();
-        var isTourneyCreated = TourCreation.OnCreateTournament(CheckedCompetitions, TournamentName, (int) Value, user.User);
+        var isTourneyCreated = TourneyService.OnCreateTournament(CheckedCompetitions, TournamentName, (int) Value, user.User,(TournamentType)Enum.Parse(typeof(TournamentType),TournamentTypeVal), (TournamentAlgorithm) Enum.Parse(typeof(TournamentAlgorithm),AlgorithmTypeVal));
         if (isTourneyCreated)
         {
             IsTournamentCreated = true;
             TournamentName = string.Empty;
             Value = 2;
-            await OnTournamentCreated.InvokeAsync();
+            await OnStateChanged.InvokeAsync();
         }
         else
         {
