--- a/src/FantasyEsportsBattle.Web/Areas/Identity/Pages/Tournaments/SpecificTournament.razor
+++ b/src/FantasyEsportsBattle.Web/Areas/Identity/Pages/Tournaments/SpecificTournament.razor
@@ -8,7 +8,10 @@
 
 <style>
     .invite-user {
-        background: green !important;
+        right: 5%;
+        position: absolute;
+    }
+    .startTournament {
         right: 5%;
         position: absolute;
     }
@@ -33,92 +36,94 @@
     }
     .tournamentName{
         color: darkslateblue;
-        font-family: fantasy;
+        font-family: 'Times New Roman', Times, serif;
         text-align: center;
+    }
+    .Tabs {
+        margin-bottom: 3%;
     }
 </style>
 
 <AuthorizeView>
     <Authorized>
-        @if (ShouldLoad)
+        <nav class="navbar navbar-expand-sm navbar-light navbar-toggleable-sm bg-dark border-bottom box-shadow mb-3">
+            <h1 class="tournamentName">@Tournament.Name</h1>
+            <h1 style="color: burlywood"> (@Tournament.TournamentState)</h1>
+            <div class="mat-elevation-z4" style="margin-bottom: 5%;">
+                <MatThemeProvider Theme="@theme1">
+                    @if (IsFormDisabled)
+                    {
+                        <MatTooltip Context="TooltipContext" Tooltip="@String.Format("Only {0} can invite players to this Tournament if Status is not started and there are empty slots",Tournament.TournamentHost.UserName)" Position="@MatTooltipPosition.Bottom">
+                            <MatButton RefBack="TooltipContext" Icon="@MatIconNames.Lock" Raised="true" Class="invite-user">Invite User</MatButton>
+                        </MatTooltip>
+                    }
+                    @if (!IsFormDisabled)
+                    {
+                        <MatButton Icon="@MatIconNames.Favorite" Raised="true" Class="invite-user" OnClick="@(() => OpenForm())">Invite User</MatButton>
+                    }
+                </MatThemeProvider>
+            </div>
+            <div class="mat-elevation-z4">
+                @if (IsTournamentHost && Tournament.TournamentState == Enumerations.TournamentState.NotStarted)
+                {
+                    <MatThemeProvider Theme="@theme2">
+                        <MatButton Icon="@MatIconNames.Launch" Raised="true" Class="startTournament" OnClick="@(() => IsBeginTournamentFormOpen = true)">BEGIN TOURNAMENT</MatButton>
+                    </MatThemeProvider>
+                }
+            </div>
+        </nav>
+        @if (!IsPartOfTournament)
         {
-        <div class="mat-elevation-z4" style="padding: 10px;">
-            <MatButton OnClick="@(() => navMenu.ToggleAllSubMenus(true))">Expand All</MatButton>
-            <MatButton OnClick="@(() => navMenu.ToggleAllSubMenus(false))">Collapse All</MatButton>
-            @if (IsFormDisabled)
-            {
-                <MatTooltip Context="TooltipContext" Tooltip="@String.Format("Only {0} can invite players to this Tournament if Status is not started and there are empty slots",Tournament.TournamentHost.UserName)" Position="@MatTooltipPosition.Bottom">
-                    <MatButton RefBack="TooltipContext" Icon="@MatIconNames.Lock" Outlined="false" Class="invite-user">Invite User</MatButton>
-                </MatTooltip>
-            }
-            @if (!IsFormDisabled)
-            {
-                    <MatButton Icon="@MatIconNames.Favorite" Outlined="true" Class="invite-user" OnClick="@(() => OpenForm())">Invite User</MatButton>
-            }
-        </div>
-            <h1 style="margin-top: 3%; margin-bottom: 2%;" class="tournamentName">@Tournament.Name</h1>
-
-            <MatNavMenu @ref="navMenu">
-                <MatNavSubMenu>
-                    <MatNavSubMenuHeader Title="@PlayersInTournamentTitle">
-                        <MatNavItem AllowSelection="false">
-                            <MatIcon Icon="assignment_ind" />&nbsp;@PlayersInTournamentTitle
-                        </MatNavItem>
-                    </MatNavSubMenuHeader>
-
-                    <MatNavSubMenuList>
-                        @foreach (var user in Tournament.ApplicationUserTournaments.Where(aut => aut.ApplicationUser == Tournament.TournamentHost))
-                        {
-                            <MatNavItem AllowSelection="false"><h4>@user.ApplicationUser.UserName   </h4><h4 class="host">  (HOST)</h4></MatNavItem>
-                        }
-                        @foreach (var user in Tournament.ApplicationUserTournaments.Where(aut => aut.ApplicationUser != Tournament.TournamentHost))
-                        {
-                            <MatNavItem AllowSelection="false"><h4>@user.ApplicationUser.UserName   </h4><h4 class="inTournament">  (IN TOURNAMENT)</h4></MatNavItem>
-                        }
-
-                        <h2 class="playerList"></h2>
-                        @if (Tournament.TournamentInvitations != null)
-                        {
-                            @foreach (var user in Tournament.TournamentInvitations)
-                            {
-                                <MatNavItem Class="playerList" AllowSelection="false"><h4 class="text">@user.InvitedUser.UserName    </h4><h4 class="invited">  (PENDING INVITE)</h4></MatNavItem>
-                            }
-                        }
-                    </MatNavSubMenuList>
-
-                </MatNavSubMenu>
-            </MatNavMenu>
-
-            <MatDialog @bind-IsOpen="@IsInviteFormOpen">
-                <MatDialogTitle>Invite Player To Tournament </MatDialogTitle>
-                <MatDialogContent>
-                    <MatTextField Label="Player Username" @bind-Value="@InvitedUser"></MatTextField>
-                </MatDialogContent>
-                <MatDialogActions>
-                    <MatButton OnClick="@(e => { IsInviteFormOpen = false; })">Exit</MatButton>
-                    <MatButton Disabled="@IsFormDisabled" OnClick="@TryInvitePlayer">Invite</MatButton>
-                </MatDialogActions>
-                <MatSnackbar @bind-IsOpen="@IsPlayerInvited">
-                    <MatSnackbarContent>Player Invited to tournament Successfully</MatSnackbarContent>
-                    <MatSnackbarActions>
-                        <MatButton OnClick="@(e => { IsInviteFormOpen = false; })" Raised="true">OK</MatButton>
-                    </MatSnackbarActions>
-                </MatSnackbar>
-                <MatSnackbar @bind-IsOpen="@IsPlayerInviteFailed">
-                    <MatSnackbarContent>Player Invite failed. User does not Exist</MatSnackbarContent>
-                </MatSnackbar>
-                <MatSnackbar @bind-IsOpen="@IsPlayerAlreadyInvited">
-                    <MatSnackbarContent>Player Is Already Invited to Tournament</MatSnackbarContent>
-                </MatSnackbar>
-                <MatSnackbar @bind-IsOpen="@IsPlayerAlreadyInTournament">
-                    <MatSnackbarContent>Player Is Already in this Tournament</MatSnackbarContent>
-                </MatSnackbar>
-            </MatDialog>
+            <h2 style="color: darkred">You are not currently a part of this tournament</h2>
         }
-        @if (!ShouldLoad)
-        {
-            <h3>User not registered for tournament</h3>
-        }
+        <MatTabGroup @bind-ActiveIndex="@tabIndex">
+            <MatTab Class="Tabs" Label="General Stats">
+                <SpecificTournamentGeneralStats TournamentId="@TournamentId" />
+            </MatTab>
+            <MatTab Class="Tabs" Label="My Team">
+
+            </MatTab>
+            <MatTab Class="Tabs" Label="Participants & Ladder">
+
+            </MatTab>
+        </MatTabGroup>
+
+        <MatDialog @bind-IsOpen="@IsInviteFormOpen">
+            <MatDialogTitle>Invite Player To Tournament </MatDialogTitle>
+            <MatDialogContent>
+                <MatTextField Label="Player Username" @bind-Value="@InvitedUser"></MatTextField>
+            </MatDialogContent>
+            <MatDialogActions>
+                <MatButton OnClick="@(e => { IsInviteFormOpen = false; })">Exit</MatButton>
+                <MatButton Disabled="@IsFormDisabled" OnClick="@TryInvitePlayer">Invite</MatButton>
+            </MatDialogActions>
+            <MatSnackbar @bind-IsOpen="@IsPlayerInvited">
+                <MatSnackbarContent>Player Invited to tournament Successfully</MatSnackbarContent>
+                <MatSnackbarActions>
+                    <MatButton OnClick="@(e => { IsInviteFormOpen = false; })" Raised="true">OK</MatButton>
+                </MatSnackbarActions>
+            </MatSnackbar>
+            <MatSnackbar @bind-IsOpen="@IsPlayerInviteFailed">
+                <MatSnackbarContent>Player Invite failed. User does not Exist</MatSnackbarContent>
+            </MatSnackbar>
+            <MatSnackbar @bind-IsOpen="@IsPlayerAlreadyInvited">
+                <MatSnackbarContent>Player Is Already Invited to Tournament</MatSnackbarContent>
+            </MatSnackbar>
+            <MatSnackbar @bind-IsOpen="@IsPlayerAlreadyInTournament">
+                <MatSnackbarContent>Player Is Already in this Tournament</MatSnackbarContent>
+            </MatSnackbar>
+        </MatDialog>
+
+        <MatDialog @bind-IsOpen="@IsBeginTournamentFormOpen">
+            <MatDialogTitle>Are You Sure you want to Begin Tournament? No more Players can be invited and the Tournament will begin on the next Monday 00:00 UTC </MatDialogTitle>
+            <MatDialogActions>
+                <MatButton OnClick="@(e => { BeginTournament(); })">BEGIN TOURNAMENT</MatButton>
+                <MatButton OnClick="@(e => { IsBeginTournamentFormOpen = false; })">Exit</MatButton>
+            </MatDialogActions>
+            <MatSnackbar @bind-IsOpen="@IsTournamentStartSuccessful">
+                <MatSnackbarContent>Tournament Started Successfully!</MatSnackbarContent>
+            </MatSnackbar>
+        </MatDialog>
 
     </Authorized>
     <NotAuthorized>
@@ -137,6 +142,19 @@
     public bool IsInviteFormOpen { get; set; }
     public bool IsPlayerInviteFailed { get; set; }
     public bool IsPlayerInvited { get; set; }
+    public bool IsBeginTournamentFormOpen { get; set; }
+    public bool IsTournamentStartSuccessful { get; set; }
+    public int tabIndex = 0;
+    MatTheme theme1 = new MatTheme()
+    {
+        Primary = MatThemeColors.Indigo._500.Value,
+        Secondary = MatThemeColors.BlueGrey._500.Value,
+    };
+    MatTheme theme2 = new MatTheme()
+    {
+        Primary = MatThemeColors.Red._500.Value,
+        Secondary = "#fafafa",
+    };
     public bool IsFormDisabled { get
         {
             return Tournament.ApplicationUserTournaments.Count >= Tournament.MaxParticipants ||
@@ -147,6 +165,10 @@
     public bool IsPlayerAlreadyInTournament { get; set; }
     public string InvitedUser { get; set; }
     public ApplicationUser User { get; set; }
+    public bool IsPartOfTournament { get
+        {
+            return Tournament.ApplicationUserTournaments.Any(aut => aut.ApplicationUser == User);
+        } }
     public string PlayersInTournamentTitle
     {
         get
@@ -167,16 +189,9 @@
 
         Tournament = dbContext.Tournaments.FirstOrDefault(t => t.Id == parsedTournamentId);
 
-        if (Tournament.ApplicationUserTournaments.Any(aut => aut.ApplicationUserId == userId))
-        {
-            IsTournamentHost = Tournament.TournamentHost.Id == userId;
-            UsersInTournament = Tournament.ApplicationUserTournaments.Select(t => t.ApplicationUser).ToList();
-            ShouldLoad = true;
-        }
-        else
-        {
-            ShouldLoad = false;
-        }
+
+        IsTournamentHost = Tournament.TournamentHost.Id == userId;
+        UsersInTournament = Tournament.ApplicationUserTournaments.Select(t => t.ApplicationUser).ToList();
     }
 
     public async Task TryInvitePlayer()
@@ -219,5 +234,10 @@
     public void OpenForm()
     {
         IsInviteFormOpen = true;
+    }
+
+    public void BeginTournament()
+    {
+        IsTournamentStartSuccessful = true;
     }
 }
